# hermes

./: .env.example  .gitignore  README.md  agentos_hello.py  auth.py  normalization.py  pyproject.toml  testing.py
.credentials/: credentials.example.json
src/agentos/: config.py  logging.py  logging_utils.py
src/agentos/adapters/google/: base_client.py
src/agentos/adapters/google/gcal/: client.py  normalizer.py  reader.py  writer.py
src/agentos/adapters/google/gmail/: client.py  normalizer.py  reader.py  writer.py
src/agentos/adapters/sqlite/: store.py
src/agentos/ports/: calendar.py  email.py  storage.py
src/hermes/: config.py  logging_utils.py
src/hermes/adapters/google/: __init__.py  base_client.py
src/hermes/adapters/google/gcal/: __init__.py  adapter.py  client.py  normalizer.py  reader.py  writer.py
src/hermes/adapters/google/gmail/: __init__.py  adapter.py  client.py  normalizer.py  reader.py  writer.py
src/hermes/adapters/local_openai_compatible/: __init__.py  llm_engine.py
src/hermes/adapters/sqlite/: __init__.py  store.py
src/hermes/app/: __init__.py  cli.py  main.py
src/hermes/ports/: __init__.py  calendar.py  email.py  llm.py  storage.py
src/hermes/services/: __init__.py  calendar_read_service.py  calendar_write_service.py  conversation_service.py  email_read_service.py  email_write_service.py
tests/: testing_llm.py
